--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "web3-zeus-provider",
   "version": "1.0.0",
   "description": "Reliable web3 provider that uses multiple RPC API connections",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"OK!\""
+    "test": "mocha --timeout=10000"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,12 @@
     "keys"
   ],
   "author": "ZitRo",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "web3-provider-engine": "^14.0.6"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "web3": "^1.0.0-beta.34"
+  }
 }
