--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "author": "ZitRo",
   "license": "MIT",
   "dependencies": {
-    "web3-provider-engine": "^14.0.6"
+    "web3-provider-engine": "^14.0.6",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
+    "nock": "^9.4.3",
     "web3": "^1.0.0-beta.34"
   }
 }
