--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3-zeus-provider",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Reliable web3 provider that uses multiple RPC API connections and switches between them in case of failure",
   "main": "src/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "author": "ZitRo",
   "license": "MIT",
   "dependencies": {
+    "truffle-privatekey-provider": "^0.1.0",
     "web3-provider-engine": "^14.0.6",
     "xmlhttprequest": "^1.8.0"
   },
